Ensure <th> elements have the same text-align property on every browser.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1588195 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/docs/images/docs-stylesheet.css
+++ b/webapps/docs/images/docs-stylesheet.css
@@ -51,6 +51,10 @@ table *:not(table) {
   border-collapse: separate;
 }
 
+th {
+  text-align: left;
+}
+
 main {
   /* Remove this once all IEs support <main> element */
   display: block;
